# coterie

./: .gitignore  README.md  alembic.ini  main.py  pyproject.toml  requirements.txt  setup.sh
.cursor/rules/: .cursorrules
.github/workflows/: forms.py  models.py
.github/workflows/character_database/: urls.py
.github/workflows/characters/: forms.py  urls.py  views.py
Original/Code/: Artifacts and Devices.gex  Grapevine Menus XML.gvm  Rotes.gex
coterie/: __main__.py
coterie/data/: trait_adjectives.json
coterie/database/: engine.py
coterie/models/: __init__.py  base.py  character.py  chronicle.py  larp_trait.py  menu.py  player.py  staff.py  trait.py  vampire.py
coterie/ui/: character_sheet.py  main_window.py
coterie/utils/: data_loader.py  menu_importer.py  menu_parser.py  trait_converter.py
data/: clans.json  disciplines.json
data-old/: abilities.json  attributes.json  backgrounds.json  demeanors.json  natures.json  paths.json
docs/: api.md  architecture.md  coding-tasks.md  component-roadmap.md  contributing.md  conversion-checklist.md  conversion-guide.md  conversion-roadmap.md  development-session-summary.md  fixes.md  index.md  larp-trait-system.md  rules.md  status.md  technical.md  ui-components.md  vb-structure.md
docs/fixes/: index.md
docs/user/: faq.md  installation.md  quickstart.md
grapevine/: __main__.py
grapevine/database/: engine.py
grapevine/models/: base.py  vampire.py
grapevine/ui/: main_window.py
import/: Grapevine Menus OWbN.gvm  Grapevine Menus.gvm
import/Templates/: Template Keywords Reference.doc
(+16 files in other folders)
